Added OAuth for visitor

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
+    <!-- A element where child elements are included and later referred eg in a .css file -->
+    <div id="a-container"></div> 
     <!-- Link to Javascript, defined on the last row in body -->
     <script src="scripts/main.js"></script>
 </body>
