--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <!-- A element where child elements are included and later referred eg in a .css file -->
-    <div id="a-container"></div> 
+    <div id="a-container">
+        <iframe src="https://github.com/login/oauth/authorize"></iframe>
+    </div> 
     <!-- Link to Javascript, defined on the last row in body -->
     <script src="scripts/main.js"></script>
 </body>
