--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- A element where child elements are included and later referred eg in a .css file -->
     <div id="a-container">
         <!-- Embedded element on the page -->
-        <iframe id="githubOAuth" src="https://github.com/login/oauth/authorize?client_id=Ov23liGusittSCIzNE2p&state=randomState123&redirect_uri=https://yourapp.com/callback" width="600" height="400"></iframe>
+        <iframe id="githubOAuth" src="https://github.com/login/oauth/authorize?client_id=Ov23liGusittSCIzNE2p&state=randomState123&redirect_uri=https://github.com/login/oauth/authorize" width="600" height="400"></iframe>
 
     </div> 
     <!-- Link to Javascript, defined on the last row in body -->
