--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
 
     </div> 
     <!-- Link to Javascript, defined on the last row in body -->
-    <script src="scripts/main.js"></script>
+    <script src=""></script>
 </body>
 </html>
