--- a/index.html
+++ b/index.html
@@ -4,17 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Forsbergs YH</title>
-    <!-- Link to CSS, defined in head on the row after title -->
+    <!-- Link to .css file, defined on the last row inside the head element of the document-->
     <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
-    <!-- A element where child elements are included and later referred eg in a .css file -->
+    <!-- A element which child elements are included and later referred eg in a .css file -->
     <div id="a-container">
-        <!-- Embedded element on the page -->
-        <iframe id="githubOAuth" src="https://github.com/login/oauth/authorize?client_id=Ov23liGusittSCIzNE2p&state=randomState123" width="600" height="400"></iframe>
-
+        <!-- No content inside the container element since we append element/s to this document in the .js file -->
     </div> 
-    <!-- Link to Javascript, defined on the last row in body -->
-    <script src=""></script>
+    <!-- Link to .js file, defined on the last row inside the body element of the document-->
+    <script src="scripts/main.js"></script>
 </body>
 </html>
